[package]
name = "rust_redlock"
description = "A Rust Redlock implementation for distributed, highly-available redis locks"
version = "0.4.0"
authors = ["David Cai <davidcai1993@yahoo.com>"]
documentation = "https://docs.rs/rust_redlock/0.4.0/rust_redlock"
homepage = "https://github.com/DavidCai1993/redlock-rs"
readme = "README.md"
repository = "https://github.com/DavidCai1993/redlock-rs"
keywords = ["redlock", "redis", "lock", "mutex", "distribution"]
categories = ["concurrency", "algorithms"]
license = "MIT"
edition = "2018"

[dependencies]
lazy_static = "^1"
redis = "^0.11"
rand = "^0.7"
snafu = "^0.4"
